# profession_ai_data_engineering_progetto8_zeppelin

./: .gitignore  LICENSE  README.md  profession_ai_data_engineering_progetto8.ipynb  profession_ai_data_engineering_progetto8_zeppelin.html  profession_ai_data_engineering_progetto8_zeppelin.zpln  pyproject.toml
.github/workflows/: ci.yml
data/: README.md  wikipedia_sample.csv
tests/: .gitkeep  conftest.py  test_data.py  test_eda.py  test_model.py  test_plots.py
wikianalysis/: __init__.py  data.py  eda.py  model.py  plots.py  spark.py
